--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>
-<img src="texture/logo.png" width="5%">
+<img src="img/logo.png" width="5%">
 </p>
 <div>
 <h1 class="dsongentom desetungavon">start your own lego journey</h1>
