--- a/lego.html
+++ b/lego.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 
-	<button id="green" onclick="green_lego();"><img src="texture/green.png" width="120"></button>
-	<button onclick="yellow_lego();"><img src="texture/yellow.png" width="120"></button>
-	<button onclick="red_lego();"><img src="texture/red.png" width="120"></button>
-	<button onclick="blue_lego();"><img src="texture/blue.png" width="120"></button>
-	<button onclick="cyan_lego();"><img src="texture/cyan.png" width="120"></button>
-	<button onclick="rose_lego();"><img src="texture/rose.png" width="120"></button>
-	<button onclick="lime_lego();"><img src="texture/lime.png" width="120"></button>
-	<button onclick="orange_lego();"><img src="texture/orange.png" width="120"></button>
-	<button onclick="removeBrick()" style="padding-top:5px"><img src="texture/cross.png" width="80"></button>
+	<button id="green" onclick="green_lego();"><img src="img/green.png" width="120"></button>
+	<button onclick="yellow_lego();"><img src="img/yellow.png" width="120"></button>
+	<button onclick="red_lego();"><img src="img/red.png" width="120"></button>
+	<button onclick="blue_lego();"><img src="img/blue.png" width="120"></button>
+	<button onclick="cyan_lego();"><img src="img/cyan.png" width="120"></button>
+	<button onclick="rose_lego();"><img src="img/rose.png" width="120"></button>
+	<button onclick="lime_lego();"><img src="img/lime.png" width="120"></button>
+	<button onclick="orange_lego();"><img src="img/orange.png" width="120"></button>
+	<button onclick="removeBrick()" style="padding-top:5px"><img src="img/cross.png" width="80"></button>
 		
 	<h2>Click any button to add a new lego brick to the scene. Use cross button to delete the last block</h2>
 	
