--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 </head>
 <body>
 <p>
-<img src="img/logo.png" width="5%">
+<img src="assets/logo.png" width="5%">
 </p>
 <div>
 <h1 class="dsongentom desetungavon">start your own lego journey</h1>
 </div>
-</div>
+
 <div id="but">
 <center>
 <form action="lego.html" method="get" target="_self">
-    <button class="btn-new" onclick="lego.html">START</button>
+    <button type="submit" class="btn-new" onclick="lego.html">START</button>
 </form>
 </center>
 </div>
 <center>
-<a href="about.html">About game</a>
+<a id="about" href="about.html">About game</a>
 </center>
 </body>
 </html>
