--- a/lego.html
+++ b/lego.html
@@ -25,7 +25,7 @@
 	<button onclick="create_cube_brick()">2x2</button>
 	<button onclick="create_brick()">2x4</button>
 	</div>
-	<button onclick="removeBrick()" style="position:absolute;left:510px;top:21px;border-radius:8px;"><img src="./assets/cross.png" width="50" style="padding-top:3px;"></button>
+	<button onclick="removeBrick()" style="position:absolute;left:510px;top:21px;border-radius:8px;"><img src="./img/cross.png" width="50" style="padding-top:3px;"></button>
 	<h2>Click any button to add a new lego brick to the scene. Use cross button to delete the last block</h2>
 
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js'></script>
