--- a/about.html
+++ b/about.html
@@ -23,6 +23,6 @@ You can contact author at sofiaodiyak@gmail.com.
 </div>
 </center>
 
-<a href="index.html"><img src="img/back.png" width="10%"></a>
+<a href="index.html"><img src="assets/back.png" width="10%"></a>
 </body>
 </html>
