--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@ Use the buttons to create a new LEGO brick and continue building your LEGO tower
 Configure the light and camera z-index (also accessible by twisting the mouse wheel) in controls when needed. <br>
 Move the camera around by pressing right mouse button. <br>
 Rotate the camera by pressing left mouse button. <br>
+To rotate a brick, click an arrow button. <br>
 Delete bricks by clicking a "cross" button. <br>
 <br>
 This project is created as part of the course "Computer graphics basics" in KPI TUKE. <br>
